--- a/index.html
+++ b/index.html
@@ -207,15 +207,16 @@
         <div class="video-container">
             
             
-            <video  autoplay muted loop>
+            <video  style="width:100%; height:auto;" autoplay muted loop>
                 <source src="MetroHacksLogoLoop.mp4" type="video/mp4">                
             </video>
             <div>
                 <div class="enter">
-            <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
 
             <button onclick="window.location.href = 'https://google.com';" class="bot" title="Prospectus">Sponsor</button>
-            </div>
+                       <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
+
+                </div>
             </div> 
         </div>
 
