--- a/index.html
+++ b/index.html
@@ -754,43 +754,26 @@ html {
 } 
     
   .enter .btn {
-  position: absolute;
+ position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: #555;
+  background-color: black;
   color: white;
-  font-size: 16px;
-  padding: 12px 24px;
+  font-family:courier;
+  font-weight:bold;
+  font-size: 25px;
+  padding: 25px 50px;
   border: none;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
   text-align: center;
 }
 
-  .enter .bot {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: #555;
-  color: white;
-  font-size: 16px;
-  padding: 12px 24px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  text-align: center;
-}
 .enter .btn:hover {
-  background-color: teal;
-}    
-.enter .bot:hover {
-  background-color: teal;
-}    
-    
+  background-color: rgb(95, 75, 139);
+}  
  #glass{
     margin-left: -200px;
     margin-right:-200px;
