--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
   
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
     
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">exmaple<sup>2</sup></button>
 
 </div>
 <!-- Work Row -->
@@ -754,8 +755,25 @@ html {
  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-90%, -50%);
-  -ms-transform: translate(-80%, -50%);
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  font-family:courier;
+  font-weight:bold;
+  font-size: 25px;
+  padding: 25px 50px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  text-align: center;
+}
+.video-container .bot {
+ position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-80%, -50%);
+  -ms-transform: translate(-90%, -50%);
   background-color: black;
   color: white;
   font-family:courier;
@@ -770,7 +788,10 @@ html {
 
 .video-container .btn:hover {
   background-color: rgb(95, 75, 139);
-}  
+}
+ .video-container .bot:hover {
+  background-color: rgb(95, 75, 139);
+}
  #glass{
     margin-left: -200px;
     margin-right:-200px;
