--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
   </video>
   
   
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
     
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor<sup>2</sup></button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
 
 </div>
 <!-- Work Row -->
