--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 }
     
     .container .btn {
-  position: absolute;
-  //top: 50%;
-  //left: 50%;
+  //position: absolute;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: white;
